<resources>
    <string name="app_name">LearnSphere</string>
    <string name="input_username">Enter Username</string>
    <string name="input_password">Enter Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="home_page">Home Page</string>
    <string name="input_email">Enter Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_name">Enter Name</string>
    <string name="show_password">Show Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>